feat: use selection as key to find locale

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,5 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
+    "typescript.tsdk": "node_modules/typescript/lib",
 }
