--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           node-version: '16.13'
       - name: Install package
-        uses: npm install
+        run: npm install
       - name: Run package check
-        uses: npm audit --audit-level=critical
+        run: npm audit --audit-level=critical
